--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,16 @@
     --second-background: #F5F4FA;
     --footer-contacts:rgba(255, 255, 255, 0.6);
     }
+body {
+    font-family: Roboto , sans-serif;
+    background-color: #fff;
+    color: var(--main-color);
+    letter-spacing: 0.03em;
+    font-size: 14px;
+    }
 p, h1, h2, h3, h4, h5, h6 {
     margin: 0;
-    }
+}
 ul {
     margin: 0;
     padding: 0;
@@ -18,6 +25,7 @@ img {
     display: block;
     max-width: 100%;
 }
+
 .container {
     width: 1200px;
     padding-left: 15px;
@@ -34,19 +42,81 @@ img {
 .link {
     text-decoration: none;
 }
-body {
-    font-family: Roboto , sans-serif;
-    background-color: #fff;
-    color: var(--main-color);
+
+/* logo */
+.logo {
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 1.19;
     letter-spacing: 0.03em;
-    font-size: 14px;
+    color: #2196F3;
+    display: inline-block;
+}
+.logo__part-white {
+    color: #fff;
+}
+.logo__part-black {
+    color: #000000;
 }
 
 
 /* Header box */
 
+.header {
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: #ECECEC;
+}
+
+.header__contacts-list {
+    display: flex;
+    margin-left: auto;
+}
+.header__contacts-item{
+    display: flex;
+}
+.header__contacts-item:not(:last-child) {
+    margin-right: 50px; 
+}
+.header__contacts-icon{
+    width: 16px;
+    height: 12px;
+    margin-right: 10px;
+    fill: currentColor;
+}
+.header__contacts-icon-smartphone {
+    width: 10px;
+    height: 16px;
+    margin-right: 10px;
+    fill: currentColor;
+}
+
+.header__container {
+    display: flex;
+} 
+.header__contacts-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    line-height: 1.14 ;
+    letter-spacing: 0.02em;
+    color: var(--regular-text-colour);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header__contacts-link:hover,
+.header__contacts-link:focus {
+    color: var(--header-nav-hover-color);
+}
+
+/* nav */
+
 .navigation__list {
     display: flex;
+    margin-left: 93px;
 }
 .navigation__item:not(:last-child){
     margin-right: 50px;
@@ -69,73 +139,12 @@ body {
 .navigation__link:focus {
         color: var(--header-nav-hover-color);
 }
-    
-.header {
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: #ECECEC;
-}
-.header__logo {
-    margin-right: 93px;
-    padding-top: 24px;
-    padding-bottom: 25px;
-    display: inline-block;
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: #2196F3;
-}
-.header__logo-part {
-    color: #000000;
-}
-.header__contacts-list {
-    display: flex;
-    margin-left: auto;
-}
-.header__contacts-item{
-    display: flex;
-}
-.header__contacts-icon{
-    width: 16px;
-    height: 12px;
-    margin-right: 10px;
-    fill: currentColor;
-}
-.header__contacts-icon-smartphone {
-    width: 10px;
-    height: 16px;
-    margin-right: 10px;
-    fill: currentColor;
-}
-.header__contacts-item:not(:last-child) {
-    margin-right: 50px; 
-}
-.header__container {
-    display: flex;
-} 
-.header__contacts-link {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    line-height: 1.14 ;
-    letter-spacing: 0.02em;
-    color: var(--regular-text-colour);
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header__contacts-link:hover,
-.header__contacts-link:focus {
-    color: var(--header-nav-hover-color);
-}
-.current-page {
+
+.navigation__link--current {
     color: var(--header-nav-hover-color);
     position: relative;
 }
-.current-page::after {
+.navigation__link--current::after {
     content: '';
     display: block;
     position: absolute;
@@ -145,6 +154,8 @@ body {
     border-radius: 2px;
     background-color: var(--header-nav-hover-color);
 }
+
+
 
 /* footer box */
 .footer {
@@ -159,24 +170,9 @@ body {
     margin-top: 20px;
 } 
 .footer__address-item:not(:last-child) {
-    margin-bottom: 5px;
-    
+    margin-bottom: 5px; 
 }
-/* footer logo */
-.footer__logo {
-    font-family: Raleway;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: #2196F3;
-    display: block;
-}
-.footer__logo-part {
-    color: #fff;
-}
-.footer__address-link-add {
+.footer__address-link--add {
     display: block;
     font-style: normal;
     line-height: 1.71;
@@ -217,7 +213,6 @@ body {
 .footer__social-item {
     width: 44px;
     height: 44px;
-    
 }
 .footer__social-item + .footer__social-item {
     margin-left: 10px;
@@ -597,7 +592,6 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
-    
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -671,6 +665,7 @@ body {
     opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
+
 .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
@@ -704,7 +699,7 @@ body {
     top: 8px;
     right: 8px;
 }
-/* Modal form */
+
 .modal__icon{
     width: 18px;
     height: 18px;
@@ -714,9 +709,10 @@ body {
 .modal__icon:focus {
     color: #2196F3;
 }
+
+/* Form */
 textarea {
-    resize: none;
-    
+    resize: none;   
 }
 .form {
     width: 100%;
@@ -728,7 +724,6 @@ textarea {
     flex-direction: column;
     margin-bottom: 10px; 
     position: relative;
-      
 }
 .form__item input {
     padding-top: 10px;
