--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -72,13 +72,12 @@
     border-radius: 50%;
     align-items: center;
     justify-content: center;
-    color: #AFB1B8;   
+    color: $main-title-color;   
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus {
-        background-color: #2196F3; 
-        color: #FFFFFF; 
+        background-color: $accent-color; 
     }
 }
 .footer__social-icon {
@@ -96,19 +95,7 @@
     color: $main-title-color;
     margin-bottom: 20px;
 }
-.footer__form input {
-    width: 358px;
-    height: 50px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-sizing: border-box;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    background-color: transparent;
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
-}
+
 .footer__form-button {
     font-family: Roboto;
     font-style: normal;
@@ -137,6 +124,16 @@
     display: flex;
 }
 .footer__input {
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: transparent;
     padding-left: 16px;
     font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
 }
