--- a/sass/components/_main-team.scss
+++ b/sass/components/_main-team.scss
@@ -61,11 +61,11 @@
     width: 100%;
     height: 100%;
     display: flex;
-    background-color: #FFFFFF;
+    background-color: $main-title-color;
     border-radius: 50%;
     align-items: center;
     justify-content: center;
-    color: #AFB1B8;
+    color: $team-social-link-color;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
     &:hover,
