--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -4,7 +4,7 @@
     left: 0px;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: $backdrop-backgroung-color;
     opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
@@ -23,7 +23,7 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 40px;
     width: 528px;
-    background-color: #fff;
+    background-color: $main-title-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 }
@@ -34,7 +34,7 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: $main-title-color;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0px;
     position: absolute;
