--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -42,5 +42,13 @@
                     0px 1px 2px rgba(0, 0, 0, 0.08), 
                     0px 2px 2px rgba(0, 0, 0, 0.12);
     }
+}
+
+.portfolio__filter-button--start {
+    background-color: $accent-color;
+    color: $main-title-color;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
+                    0px 1px 2px rgba(0, 0, 0, 0.08), 
+                    0px 2px 2px rgba(0, 0, 0, 0.12);
 
 }
