--- a/sass/components/_projects-portfolio.scss
+++ b/sass/components/_projects-portfolio.scss
@@ -55,13 +55,15 @@
     left: 0px;
     width: 100%;
     height: 100%;
-    background-color: rgba(33, 150, 243, 0.9);
+    background-color: $projects-overlay-color;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .projects__card:hover &,
+    .projects__card:focus & {
+        transform: translateY(0);
+    }
 }
-.projects__card:hover .projects__overlay-block {
-    transform: translateY(0);
-}
+
 .projects__overlay-text {
     position: absolute;
     top: 50%;
@@ -73,7 +75,15 @@
     color: $main-title-color;
     width: 322px;
     opacity: 0;
+    .projects__card:hover &,
+    .projects__card:focus & {
+        opacity: 1;
+    }
 }
-.projects__card:hover .projects__overlay-text{
-    opacity: 1;
-}
+
+// .projects__card:hover .projects__overlay-block {
+//     transform: translateY(0);
+// }
+// .projects__card:hover .projects__overlay-text{
+//     opacity: 1;
+// }
