--- a/sass/components/_second-main.scss
+++ b/sass/components/_second-main.scss
@@ -25,7 +25,7 @@
     margin-bottom: 30px;
 }
 .second-main__icons-item {
-    background-color: #F5F4FA;
+    background-color: $second-background-color;
     width: 270px;
     height: 120px;
     border-radius: 4px;
