--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,11 @@ img {
   color: #212121;
 }
 
+.logo--footer {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
 .navigation {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -782,8 +787,8 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects__card:hover .projects__overlay-block,
-.projects__card:focus .projects__overlay-block {
+.projects__link-img:hover .projects__overlay-block,
+.projects__link-img:focus .projects__overlay-block {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
@@ -802,8 +807,8 @@ img {
   opacity: 0;
 }
 
-.projects__card:hover .projects__overlay-text,
-.projects__card:focus .projects__overlay-text {
+.projects__link-img:hover .projects__overlay-text,
+.projects__link-img:focus .projects__overlay-text {
   opacity: 1;
 }
 
