--- a/sass/components/_projects-portfolio.scss
+++ b/sass/components/_projects-portfolio.scss
@@ -58,8 +58,8 @@
     background-color: $projects-overlay-color;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .projects__card:hover &,
-    .projects__card:focus & {
+    .projects__link-img:hover &,
+    .projects__link-img:focus & {
         transform: translateY(0);
     }
 }
@@ -75,8 +75,8 @@
     color: $main-title-color;
     width: 322px;
     opacity: 0;
-    .projects__card:hover &,
-    .projects__card:focus & {
+    .projects__link-img:hover &,
+    .projects__link-img:focus & {
         opacity: 1;
     }
 }
@@ -87,3 +87,4 @@
 // .projects__card:hover .projects__overlay-text{
 //     opacity: 1;
 // }
+
