--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -8,9 +8,6 @@
     display: flex;
     align-items: baseline;
 }
-.footer__links {
-    margin-right: 86px;
-}
 .footer__address {
     margin-top: 20px;
 } 
@@ -43,6 +40,7 @@
 }
 .footer__social {
     background-color: transparent;
+    margin-left: 86px;
 }
 .footer__social-text {
     font-size: 14px;
