--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ img {
   padding-bottom: 94px;
 }
 
-.header__contacts-link, .logo, .navigation__link, .navigation__link--current, .footer__address-link--add, .footer__address-link {
+.header__contacts-link, .logo, .navigation__link, .navigation__link--current, .footer__address-link--add, .footer__address-link, .projects__link-img {
   text-decoration: none;
 }
 
@@ -65,8 +65,8 @@ img {
   display: flex;
 }
 
-.header__contacts-item:not(:last-child) {
-  margin-right: 50px;
+.header__contacts-item:not(:first-child) {
+  margin-left: 50px;
 }
 
 .header__contacts-icon {
@@ -251,9 +251,12 @@ img {
   display: flex;
 }
 
+.second-main__title {
+  display: none;
+}
+
 .second-main__item-title {
   margin-bottom: 10px;
-  width: 270px;
   line-height: 1.14;
   text-transform: uppercase;
   color: #212121;
@@ -284,14 +287,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.second-main__icons-item + .second-main__icons-item {
-  margin-left: 30px;
-}
-
-.second-main__title {
-  display: none;
+  margin-bottom: 30px;
 }
 
 .second-main__item-text {
@@ -357,7 +353,7 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 30px 0 10px 0;
+  margin-bottom: 10px;
 }
 
 .main-team__item-text {
@@ -380,7 +376,7 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .main-team__social-item {
@@ -418,6 +414,10 @@ img {
 
 .main-team__social-icon {
   fill: currentColor;
+}
+
+.main-team__image {
+  margin-bottom: 30px;
 }
 
 .clients__title {
@@ -491,10 +491,6 @@ img {
           align-items: baseline;
 }
 
-.footer__links {
-  margin-right: 86px;
-}
-
 .footer__address {
   margin-top: 20px;
 }
@@ -527,6 +523,7 @@ img {
 
 .footer__social {
   background-color: transparent;
+  margin-left: 86px;
 }
 
 .footer__social-text {
@@ -716,8 +713,6 @@ img {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-top: 50px;
-  margin-right: -30px;
-  margin-bottom: -30px;
 }
 
 .projects__card {
@@ -738,7 +733,7 @@ img {
   margin-right: 0;
 }
 
-.projects__card:hover, .projects__card:focus {
+.projects__card:hover, .projects__card:focus-within {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -747,9 +742,7 @@ img {
   border: 1px solid #EEEEEE;
   border-top: none;
   width: 370px;
-  padding-top: 20px;
-  padding-left: 24px;
-  padding-bottom: 20px;
+  padding: 20px 24px 20px 24px;
 }
 
 .projects__card-text {
@@ -779,8 +772,8 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  -webkit-transform: translateY(101%);
+          transform: translateY(101%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -940,7 +933,7 @@ textarea {
 }
 
 .form__comment-block {
-  margin-bottom: 0;
+  margin-bottom: 20px;
 }
 
 .form__item label {
@@ -948,12 +941,13 @@ textarea {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
-  padding-bottom: 4px;
+  margin-bottom: 4px;
   cursor: pointer;
 }
 
 .form__title {
   font-size: 20px;
+  font-weight: 700;
   line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
@@ -971,7 +965,6 @@ textarea {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 20px;
   margin-bottom: 30px;
 }
 
@@ -980,11 +973,11 @@ textarea {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
-  margin-left: 8px;
 }
 
 .form__policy-link {
   color: #2196F3;
+  margin-left: 5px;
 }
 
 .form__button-container {
@@ -1066,6 +1059,10 @@ textarea {
   height: 15px;
   background-image: url(../images/svg/not-check.svg);
   margin-right: 8px;
+}
+
+.form__checkbox-input:focus ~ .form__checkbox-lable::before {
+  background-image: url(../images/svg/not-check_blue.svg);
 }
 
 .form__checkbox-input:checked ~ .form__checkbox-lable::before {
