--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -39,18 +39,19 @@ textarea {
     transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form__comment-block {
-    margin-bottom: 0;
+    margin-bottom: 20px;
 }
 .form__item label {
     color: #757575;
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
-    padding-bottom: 4px;
+    margin-bottom: 4px;
     cursor: pointer;
 }
 .form__title{
     font-size: 20px;
+    font-weight: 700;
     line-height: 1.15;
     text-align: center;
     letter-spacing: 0.03em;
@@ -61,7 +62,6 @@ textarea {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
     margin-bottom: 30px;
 }
 .form__checkbox label {
@@ -69,10 +69,11 @@ textarea {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: $regular-text-color;
-    margin-left: 8px;
+    
 }
 .form__policy-link {
     color: $accent-color;
+    margin-left: 5px;
 }
 .form__button-container {
     display: flex; 
@@ -127,6 +128,9 @@ textarea {
     background-image: url(../images/svg/not-check.svg);
     margin-right: 8px;
 
+}
+.form__checkbox-input:focus ~  .form__checkbox-lable::before {
+    background-image: url(../images/svg/not-check_blue.svg);
 }
 .form__checkbox-input:checked ~ .form__checkbox-lable::before {
     background-image: url(../images/svg/icon-check.svg);
