--- a/sass/components/_projects-portfolio.scss
+++ b/sass/components/_projects-portfolio.scss
@@ -1,11 +1,15 @@
+
 .projects__list {
     @extend %list;
     display: flex;
     flex-wrap: wrap;
     margin-top: 50px;
-    margin-right: -30px;
-    margin-bottom: -30px;
 }
+.projects__link-img {
+    @extend %link;
+
+}
+
 .projects__card {
     flex-basis: calc(100%/3 - 30px);
     margin-right: 30px;
@@ -17,25 +21,25 @@
         margin-right: 0;
     }
     &:hover,
-    &:focus{
+    &:focus-within {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
         0px 4px 4px rgba(0, 0, 0, 0.06), 
         1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 }
+
 .projects__text {
     border: 1px solid #EEEEEE;
     border-top: none;
     width: 370px;
-    padding-top: 20px;
-    padding-left: 24px;
-    padding-bottom: 20px;
+    padding: 20px 24px 20px 24px;
 }
 .projects__card-text {
     margin-top: 4px;
     font-size: 16px;
     line-height: 1.87;
     color: $regular-text-color;
+    
 } 
 .projects__card-title {
     font-size: 18px;
@@ -56,7 +60,7 @@
     width: 100%;
     height: 100%;
     background-color: $projects-overlay-color;
-    transform: translateY(100%);
+    transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .projects__link-img:hover &,
     .projects__link-img:focus & {
