--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -44,6 +44,7 @@
 }
 .footer__social-text {
     font-size: 14px;
+    font-weight: 700;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
