--- a/sass/components/_main-team.scss
+++ b/sass/components/_main-team.scss
@@ -23,6 +23,7 @@
                 0px 1px 1px rgba(0, 0, 0, 0.14), 
                 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    padding-bottom: 30px;
     &:not(:last-child){
         margin-right: 30px;
     }
@@ -48,7 +49,6 @@
     @extend %list;
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
 }
 .main-team__social-item {
     width: 44px;
